fix mobile menu, overflow ant-row

--- a/src/styles/layout/default.module.scss
+++ b/src/styles/layout/default.module.scss
@@ -164,6 +164,11 @@
 			// YUDI
 			
 			:global{
+				.ant-row{
+					@include res.media(phone) {
+						overflow: hidden;
+					}
+				}
 				.ant-tabs-tab{
 					.ant-tabs-tab-btn{
 						color: #ffffff;
